[package]
name = "ufoglifparser"
license = "MIT/Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-xml = "0.22"
norad = { path = "../../norad" }
plist = "1.3"
thiserror = "1"

[dev-dependencies]
pretty_assertions = "1"
